--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             </a>
             <nav class="menu">
                 <ul>
-                    <li><a href="#">HERRAMIENTAS</a></li>
-                    <li><a href="#">PRECIOS</a></li>
+                    <li><a href="#herramientas">HERRAMIENTAS</a></li>
+                    <li><a href="#galeria">GALERÍA</a></li>
                     <li><a href="#">INICIAR SESIÓN</a></li>
-                    <li><a href="#" class="button-primary">EMPEZAR AHORA</a></li>
+                    <li><a href="#registro" class="button-primary">EMPEZAR AHORA</a></li>
                 </ul>
             </nav>
         </div>
@@ -37,7 +37,7 @@
     </div>
 
     <!-- Tabs Section - Herramientas que ofrecemos -->
-    <section class="tabs-section">
+    <section id="herramientas" class="tabs-section">
         <div class="container tabs-container">
             <h2>Herramientas que ofrecemos</h2>
 
@@ -129,7 +129,7 @@
     </section>
 
     <!-- Galería de Imágenes -->
-    <section class="gallery">
+    <section id="galeria" class="gallery">
         <h2>Nuestra Galería</h2>
         <div class="grid-gallery">
             <img src="img/gallery-1.svg" alt="Placeholder 1">
@@ -142,7 +142,7 @@
     </section>
 
     <!-- Form Section -->
-    <section class="form-section">
+    <section id="registro" class="form-section">
         <div class="container form-container">
             <h2>Regístrate para empezar a analizar tus levantamientos</h2>
             <p>Únete a Training Helper y lleva tu entrenamiento al siguiente nivel.</p>
