Agregar sección de Videos de Ejercicios con controles de reproducción y estilos CSS correspondientes. Implementar lógica para pausar videos que no están en el viewport y para pausar otros videos al reproducir uno nuevo. Incluir archivos de video para Sentadilla, Press de Banca y Peso Muerto.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <nav class="menu">
                 <ul>
                     <li><a href="#herramientas">HERRAMIENTAS</a></li>
+                    <li><a href="#videos-ejercicios">VIDEOS</a></li>
                     <li><a href="#galeria">GALERÍA</a></li>
                     <li><a href="#">INICIAR SESIÓN</a></li>
                     <li><a href="#registro" class="button-primary">EMPEZAR AHORA</a></li>
@@ -153,6 +154,43 @@
                     <div class="tab-gallery">
                         <img src="img/tab6-image.svg" alt="Entrenamiento basado en velocidad (VBT) Image">
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Sección de Videos de Ejercicios -->
+    <section id="videos-ejercicios" class="videos-section">
+        <div class="container">
+            <h2 data-aos="fade-up">Videos de Técnica</h2>
+            <p data-aos="fade-up">Aprende la técnica correcta para los tres grandes levantamientos</p>
+            
+            <div class="videos-grid">
+                <div class="video-item" data-aos="fade-up" data-aos-delay="100">
+                    <h3>Sentadilla (Squat)</h3>
+                    <video controls poster="img/squat-thumbnail.jpg">
+                        <source src="video/squat.mp4" type="video/mp4">
+                        Tu navegador no soporta el elemento de video.
+                    </video>
+                    <p>La sentadilla es un ejercicio compuesto que fortalece principalmente piernas y glúteos.</p>
+                </div>
+                
+                <div class="video-item" data-aos="fade-up" data-aos-delay="300">
+                    <h3>Press de Banca (Bench Press)</h3>
+                    <video controls poster="img/bench-thumbnail.jpg">
+                        <source src="video/bench.mp4" type="video/mp4">
+                        Tu navegador no soporta el elemento de video.
+                    </video>
+                    <p>El press de banca es el ejercicio principal para desarrollar la fuerza del tren superior.</p>
+                </div>
+
+                <div class="video-item" data-aos="fade-up" data-aos-delay="200">
+                    <h3>Peso Muerto (Deadlift)</h3>
+                    <video controls poster="img/deadlift-thumbnail.jpg">
+                        <source src="video/deadlift.mp4" type="video/mp4">
+                        Tu navegador no soporta el elemento de video.
+                    </video>
+                    <p>El peso muerto trabaja la cadena posterior y es excelente para desarrollar fuerza general.</p>
                 </div>
             </div>
         </div>
