Actualizar logotipos en el encabezado y pie de página, reemplazando archivos SVG por un nuevo archivo WEBP. Ajustar el tamaño de las imágenes del logotipo a 80px para mejorar la visibilidad.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
         <div class="container header-container">
             <a href="/" class="logo">
-                <img src="img/training-helper-logo.svg" alt="Training Helper Logo">
+                <img src="img/logo.webp" alt="Training Helper Logo">
             </a>
             <nav class="menu">
                 <ul>
@@ -275,7 +275,7 @@
     <footer class="footer">
         <div class="container footer-container">
             <div class="footer-logo">
-                <img src="img/training-helper-logo-footer.svg" alt="Training Helper Logo Footer">
+                <img src="img/logo.webp" alt="Training Helper Logo Footer">
             </div>
             <div class="footer-social">
                 <a href="#" target="_blank">TikTok</a>
