Actualizar imágenes de la galería, reemplazando archivos SVG por nuevos archivos WEBP y ajustando los atributos alt para mejorar la accesibilidad.

--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@
         </div>
     </section>
 
-    <!-- Sección de Videos de Ejercicios -->
+    <!-- Sección de Vídeos de Ejercicios -->
     <section id="videos-ejercicios" class="videos-section">
         <div class="container">
-            <h2 data-aos="fade-up">Videos de Técnica</h2>
+            <h2 data-aos="fade-up">Vídeos de Técnica</h2>
             <p data-aos="fade-up">Aprende la técnica correcta para los tres grandes levantamientos</p>
             
             <div class="videos-grid">
@@ -201,37 +201,37 @@
         <h2 data-aos="fade-up">Nuestra Galería</h2>
         <div class="grid-gallery">
             <div class="gallery-item" data-aos="fade-up" data-aos-delay="100">
-                <img src="img/gallery-1.svg" alt="Placeholder 1" class="gallery-img">
+                <img src="img/gallery/gallery-1.webp" alt="Galería 1" class="gallery-img">
                 <div class="gallery-overlay">
                     <span><i class="fas fa-search-plus"></i></span>
                 </div>
             </div>
             <div class="gallery-item" data-aos="fade-up" data-aos-delay="200">
-                <img src="img/gallery-2.svg" alt="Placeholder 2" class="gallery-img">
+                <img src="img/gallery/gallery-2.webp" alt="Galería 2" class="gallery-img">
                 <div class="gallery-overlay">
                     <span><i class="fas fa-search-plus"></i></span>
                 </div>
             </div>
             <div class="gallery-item" data-aos="fade-up" data-aos-delay="300">
-                <img src="img/gallery-3.svg" alt="Placeholder 3" class="gallery-img">
+                <img src="img/gallery/gallery-3.webp" alt="Galería 3" class="gallery-img">
                 <div class="gallery-overlay">
                     <span><i class="fas fa-search-plus"></i></span>
                 </div>
             </div>
             <div class="gallery-item" data-aos="fade-up" data-aos-delay="100">
-                <img src="img/gallery-4.svg" alt="Placeholder 4" class="gallery-img">
+                <img src="img/gallery/gallery-4.webp" alt="Galería 4" class="gallery-img">
                 <div class="gallery-overlay">
                     <span><i class="fas fa-search-plus"></i></span>
                 </div>
             </div>
             <div class="gallery-item" data-aos="fade-up" data-aos-delay="200">
-                <img src="img/gallery-5.svg" alt="Placeholder 5" class="gallery-img">
+                <img src="img/gallery/gallery-5.webp" alt="Galería 5" class="gallery-img">
                 <div class="gallery-overlay">
                     <span><i class="fas fa-search-plus"></i></span>
                 </div>
             </div>
             <div class="gallery-item" data-aos="fade-up" data-aos-delay="300">
-                <img src="img/gallery-6.svg" alt="Placeholder 6" class="gallery-img">
+                <img src="img/gallery/gallery-6.webp" alt="Galería 6" class="gallery-img">
                 <div class="gallery-overlay">
                     <span><i class="fas fa-search-plus"></i></span>
                 </div>
