Reemplazar imágenes SVG de la galería por nuevos archivos WEBP, mejorando la optimización y la accesibilidad. Se eliminan los archivos SVG obsoletos.

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         </div>
                     </div>
                     <div class="tab-gallery">
-                        <img src="img/tab1-image.svg" alt="App iOS/Android Image">
+                        <img src="img/tabs/tab-1.webp" alt="App iOS/Android Image">
                     </div>
                 </div>
             </div>
@@ -104,7 +104,7 @@
                         <p>Ve la profundidad exacta de tus sentadillas con alta precisión. Determina fácilmente cuántos centímetros estás por encima o por debajo del paralelo.</p>
                     </div>
                     <div class="tab-gallery">
-                        <img src="img/tab2-image.svg" alt="Análisis de profundidad Image">
+                        <img src="img/tabs/tab-2.webp" alt="Análisis de profundidad Image">
                     </div>
                 </div>
             </div>
@@ -116,7 +116,7 @@
                         <p>Compara tus repeticiones fácilmente. Observa cuándo y cómo tu técnica se deteriora con la fatiga.</p>
                     </div>
                     <div class="tab-gallery">
-                        <img src="img/tab3-image.svg" alt="Comparación de repeticiones Image">
+                        <img src="img/tabs/tab-3.webp" alt="Comparación de repeticiones Image">
                     </div>
                 </div>
             </div>
@@ -128,7 +128,7 @@
                         <p>Identifica el rango de movimiento más débil en tus levantamientos. Así puedes enfocarte en trabajar esa parte para mejorar tus levantamientos.</p>
                     </div>
                     <div class="tab-gallery">
-                        <img src="img/tab4-image.svg" alt="Análisis de 'sticking point' Image">
+                        <img src="img/tabs/tab-4.webp" alt="Análisis de 'sticking point' Image">
                     </div>
                 </div>
             </div>
@@ -140,7 +140,7 @@
                         <p>Mide el tempo de cada repetición. Nuestro algoritmo mide las fases excéntrica, pausa y concéntrica con alta precisión.</p>
                     </div>
                     <div class="tab-gallery">
-                        <img src="img/tab5-image.svg" alt="Mide tu tempo Image">
+                        <img src="img/tabs/tab-5.webp" alt="Mide tu tempo Image">
                     </div>
                 </div>
             </div>
@@ -152,7 +152,7 @@
                         <p>Observa la velocidad concéntrica y la velocidad perdida de cada repetición. Esta es la métrica fundamental para el entrenamiento basado en velocidad.</p>
                     </div>
                     <div class="tab-gallery">
-                        <img src="img/tab6-image.svg" alt="Entrenamiento basado en velocidad (VBT) Image">
+                        <img src="img/tabs/tab-6.webp" alt="Entrenamiento basado en velocidad (VBT) Image">
                     </div>
                 </div>
             </div>
