--- a/index.html
+++ b/index.html
@@ -168,25 +168,25 @@
             <div class="videos-grid">
                 <div class="video-item" data-aos="fade-up" data-aos-delay="100">
                     <h3>Sentadilla (Squat)</h3>
-                    <video controls poster="assets/img/squat-thumbnail.jpg">
+                    <video controls poster="assets/img/video-thumbnails/squat-thumbnail.webp">
                         <source src="assets/video/squat.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                     <p>La sentadilla es un ejercicio compuesto que fortalece principalmente piernas y glúteos.</p>
                 </div>
                 
-                <div class="video-item" data-aos="fade-up" data-aos-delay="300">
+                <div class="video-item" data-aos="fade-up" data-aos-delay="200">
                     <h3>Press de Banca (Bench Press)</h3>
-                    <video controls poster="assets/img/bench-thumbnail.jpg">
+                    <video controls poster="assets/img/video-thumbnails/bench-thumbnail.webp">
                         <source src="assets/video/bench.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                     <p>El press de banca es el ejercicio principal para desarrollar la fuerza del tren superior.</p>
                 </div>
 
-                <div class="video-item" data-aos="fade-up" data-aos-delay="200">
+                <div class="video-item" data-aos="fade-up" data-aos-delay="300">
                     <h3>Peso Muerto (Deadlift)</h3>
-                    <video controls poster="assets/img/deadlift-thumbnail.jpg">
+                    <video controls poster="assets/img/video-thumbnails/deadlift-thumbnail.webp">
                         <source src="assets/video/deadlift.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
