--- a/index.html
+++ b/index.html
@@ -294,7 +294,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
-    <script src="assets/js/script.js"></script>
-    <script src="assets/js/aos-config.js"></script>
+    <script type="module" src="assets/js/main.js"></script>
 </body>
 </html>
