Actualizar la ruta del logotipo en index.html para apuntar a '/training-helper/'.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Header - Menu Horizontal -->
     <header class="header">
         <div class="container header-container">
-            <a href="/" class="logo">
+            <a href="/training-helper/" class="logo">
                 <img src="assets/img/logo.webp" alt="Training Helper Logo">
             </a>
             <nav class="menu">
