Agregar título de la aplicación en index.html y estilos para el menú móvil. Implementar funcionalidad de menú desplegable en mobile-menu.js y ajustar estilos CSS para mejorar la experiencia en dispositivos móviles.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <a href="/training-helper/" class="logo">
                 <img src="assets/img/logo.webp" alt="Training Helper Logo">
             </a>
+            <h1 class="app-title">Training Helper</h1>
             <nav class="menu">
                 <ul>
                     <li><a href="#herramientas">HERRAMIENTAS</a></li>
